update additional style

--- a/src/components/quiz-content/style.scss
+++ b/src/components/quiz-content/style.scss
@@ -1,6 +1,7 @@
 .quiz-content-container {
   padding-top: 5rem;
   text-align: left;
+  padding-bottom: 5rem;
 
   .answer-container {
     display: flex;
